--- a/client/src/components/modal/style.css
+++ b/client/src/components/modal/style.css
@@ -1,28 +1,31 @@
 .btn {
     float:right;
-    background-color: #e74944;
-    color:#4EC5C1;
-    font-weight: bold;
+    background-color: #4ec5c1;
+    color:black;
+    font-size: 20px;
+    font-family: sans-serif;
     border-style: solid ;
     border-color: black;
     border-width: 4px;
+    margin-top: 20px;
+    margin-right: 15px;
 }
 .btn:hover {
-    background-color:#4EC5C1;
-    color: #e74944 ;
+    background-color:#EC576B;
     border-color: black;
     
 }
+
+
 .btn-1{
-    background-color: #e74944;
+    background-color: #4ec5c1;
     color:black;
-    font-weight: bold;
     border-style: solid;
     border-color: #4EC5C1;
     border-width: 4px;
 }
 .btn-1:hover {
-    background-color:#e74944;
+    background-color:#4ec5c1;
     color:#4EC5C1;  
     border-color:#4EC5C1;
     
@@ -62,4 +65,8 @@ font-weight: bold;
     font-size: 48px;
     font-weight: bolder;  
 
+}
+
+.close{
+    color: #4ec5c1;
 }
