--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,11 +1,43 @@
+  html,
+  body {
+    margin:0;
+    padding: 0;
+    height: 100%;
+  }
+
+  
   .footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
-    border-top: 8px solid #4aaaa5;
-    /* Set the fixed height of the footer here */
+    border-top: 8px solid #4ec5c1;
     height: 100px;
     background-color: black;
     text-align: center;
   }
   
+
+  /*---------Media Query All - 599px --------------*/
+
+@media all and (max-device-width: 599px) {
+  .toggle-.footer{
+      display: none;
+
+  }
+}
+
+/*---------Media Query 600px - 799px --------------*/
+
+@media (min-width: 600px) and (max-device-width: 799px) {
+  .footer{
+      display: none;
+  }
+}
+
+/*---------Media Query 800px 1455px--------------*/
+
+@media (min-width: 800px) and (max-device-width: 1455px) {
+  .footer{
+      display: none;
+  }
+}
