--- a/client/src/components/Jumbotron/style.css
+++ b/client/src/components/Jumbotron/style.css
@@ -20,3 +20,14 @@ color: black;
 .results{
     height: 200px;
 }
+.rDates {
+    font-family: 'Wendy One', sans-serif;
+    text-justify: auto;
+    font-size: inherit;
+  
+}
+
+.titleBlk {
+ height: 20;
+
+}
