--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,25 +1,34 @@
-  .footer {
-    position: absolute;
-    left: 0;
+  .main-footer {
+    margin-top: 20px;
     bottom: 0;
-    right: 0;
     width: 100%;
     border-top: 8px solid #4ec5c1;
     height: 100px;
     background-color: black;
-    text-align: center;
     
   }
-  
 
-  /*---------Media Query All - 991px --------------*/
+   /*---------Media Query All - 599px --------------*/
 
-@media all  and (max-device-width: 991px){
-  .footer{
+@media all and (max-device-width: 599px) {
+  .toggle-.footer{
       display: none;
 
   }
 }
 
+/*---------Media Query 600px - 799px --------------*/
 
+@media (min-width: 600px) and (max-device-width: 799px) {
+  .footer{
+      display: none;
+  }
+}
 
+/*---------Media Query 800px 1455px--------------*/
+
+@media (min-width: 800px) and (max-device-width: 1455px) {
+  .footer{
+      display: none;
+  }
+}
