--- a/client/src/pages/css/results.css
+++ b/client/src/pages/css/results.css
@@ -1,7 +1,11 @@
+.results-container{
+    height: 100%;
+    
+}
 
 .resturaunt-container{
     border: 1px solid black;
-    height: 400px;
+    height: 600px;
     margin-left: 15px;
     min-height: 100%;
     
@@ -9,7 +13,7 @@
 
 .activity-container{
     border: 1px solid black;
-    height: 400px;
+    height: 600px;
     margin-right: 15px;
     min-height: 100%;
     
