--- a/client/src/components/Jumbotron/style.css
+++ b/client/src/components/Jumbotron/style.css
@@ -8,7 +8,7 @@
     font-family: 'Wendy One', sans-serif;
     font-size: 115%;
     letter-spacing: .1em;
-    padding-top: 35px;
+    padding-top: 15px;
 
 }
 
@@ -33,4 +33,25 @@ color: black;
 .titleBlk {
  height: 20;
 
+}
+
+form {
+    border-style: solid;
+    border-color:#4EC5C1;
+    border-width: 7px;
+    border-radius: 5px;
+}
+.btn {
+    float: left;
+    background-color: black;
+    color: #EC576B;
+    font-weight: bold;
+    font-family: 'Wendy One', sans-serif;
+    letter-spacing: .05em;
+
+    border-style: solid ;
+    border-color: #4EC5C1;
+    border-width: 4px;
+    margin-top: 20px;
+    margin-right: 15px;
 }
