--- a/client/src/pages/css/results.css
+++ b/client/src/pages/css/results.css
@@ -8,6 +8,7 @@
     height: 600px;
     margin-left: 15px;
     min-height: 100%;
+    padding-left: 10px;
     
 }
 
@@ -16,6 +17,7 @@
     height: 600px;
     margin-right: 15px;
     min-height: 100%;
+    padding-left: 10px;
     
 
 }
