updating planned.js, completed.js, filter -working on buttons

--- a/client/src/components/Jumbotron/style.css
+++ b/client/src/components/Jumbotron/style.css
@@ -10,7 +10,14 @@
     letter-spacing: .01em;
     padding-top: 15px;
 }
+.scoreTxt {
+    font-family: 'Wendy One', sans-serif;
+    font-size: 150%;
+    letter-spacing: .01em;
+    padding-top: 25px;
+    align-items: center;
 
+}
 .button {
     color: black;
 }
