adding render of data to Planned and Completed dates, made changes to filter page functions on buttons

--- a/client/src/pages/css/about.css
+++ b/client/src/pages/css/about.css
@@ -1,4 +1,4 @@
-.main{
+/* .main{
     margin-top: 40px;
     margin-left: 20px;
 }
@@ -28,4 +28,4 @@ contain: content;
 font-size: 25px;
 font-weight: bold;
 margin-top: 2px;
-}
+} */
