--- a/client/src/pages/css/results.css
+++ b/client/src/pages/css/results.css
@@ -22,3 +22,18 @@
 
 }
 
+.btn-results{
+    float: right;
+    background-color: black;
+    color: #EC576B;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: 'Wendy One', sans-serif;
+    border-style: solid ;
+    border-color: #4EC5C1;
+    border-width: 4px;
+    margin-top: 20px;
+    margin-right: 15px;
+    padding: 20px;
+}
+
